@@ -52,6 +52,17 @@ CDVDPlayerVideo::~CDVDPlayerVideo()
   DeleteCriticalSection(&m_critCodecSection);
 }
 
+__int64 CDVDPlayerVideo::GetOutputDelay()
+{
+    __int64 time = m_messageQueue.GetPacketCount(CDVDMsg::DEMUXER_PACKET);
+    time *= DVD_TIME_BASE;
+    if( m_fFrameRate )
+      time /= m_fFrameRate;
+    else
+      time = 0LL;
+    return time;
+}
+
 bool CDVDPlayerVideo::OpenStream( CDVDStreamInfo &hint )
 {  
 
